[tool.poetry]
name = "train"
version = "0.1.0"
description = ""
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
transformers = {extras = ["torch"], version = "^4.33.1"}
datasets = "^2.14.5"
pyarrow = "^13.0.0"
numpy = "^1.25.2"
clearml = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
